--- a/app.json
+++ b/app.json
@@ -7,5 +7,10 @@
       "**/*"
     ]
   },
-  "name": "MobileApp"
+  "name": "MobileApp",
+  "splash": {
+    "image": "https://cdn.pixabay.com/photo/2017/03/19/20/19/ball-2157465__340.png",
+    "resizeMode": "contain",
+    "backgroundColor": "#000000"
+  }
 }
