--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/netinfo": "^9.3.0",
+    "@react-native-picker/picker": "^2.4.3",
+    "amazon-cognito-identity-js": "^5.2.10",
+    "aws-amplify": "^4.3.30",
+    "aws-amplify-react-native": "^6.0.5",
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
