--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/netinfo": "^9.3.0",
     "@react-native-picker/picker": "^2.4.3",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "amazon-cognito-identity-js": "^5.2.10",
     "aws-amplify": "^4.3.30",
     "aws-amplify-react-native": "^6.0.5",
